--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -21,7 +21,7 @@
   background-color: $color-bg-light;
   border: 1px solid rgba($color-black, 0.3);
   @include respond(phone) {
-    padding: 5rem 1rem;
+    padding: 5rem 0;
   }
 }
 
